--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "seed": "node utils/seed"
+    "start": "node index.js",
+    "seed": "node utils/seed.js"
   },
   "author": "Rwalker2",
   "license": "ISC",
